<?xml version="1.0"?>
<package format="2">
  <name>realsense_gazebo_description</name>
  <version>0.1.0</version>
  <description>The realsense_gazebo_description package</description>
  <maintainer email="michele.tartari@iit.it">m-tartari</maintainer>
  <author email="michele.tartari@iit.it">m-tartari</author>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
